--- a/src/aura/logMonitor/logMonitor.cmp
+++ b/src/aura/logMonitor/logMonitor.cmp
@@ -1,4 +1,4 @@
-<aura:component implements="flexipage:availableForAllPageTypes">
+<aura:component implements="flexipage:availableForAllPageTypes" access="global">
     <aura:attribute name="subscription" type="Map"/>
     <aura:attribute name="isMuted" type="Boolean" default="false"/>
     <aura:attribute name="logs" type="Map"/>
